--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Skill Finder</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to Skill Finder</h1>
     <div id="'root"></div>
     <!-- <script src="build/bundle.js"></script> -->
   </body>
