--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Welcome to Skill Finder</h1>
-    <div id="'root"></div>
-    <!-- <script src="build/bundle.js"></script> -->
+    <div id="root"></div>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
