--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <h1>Skill Finder</h1>
     <div id="root"></div>
-    <script src="./build/bundle.js"></script>
+    <!-- <script src="./build/bundle.js"></script> -->
   </body>
 </html>
